--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "cordova-plugin-bluetooth-serial": "^0.4.7",
         "cordova-plugin-whitelist": "^1.3.3",
         "react": "^16.4.2",
-        "react-dom": "^16.4.2"
+        "react-dom": "^16.4.2",
+        "react-md-spinner": "^0.3.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
